# SubTracked

./: .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  CLAUDE.md  HANDOVER-archive.md  HANDOVER.md  LICENSE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  biome.json  index.html  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
src-tauri/: .gitignore  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-01b4dc1f040a2e2c1888d045a632f796d4984ce0743c683c95b3eb7f742a15f7.json  query-031c58e2e5898bd214fab510d32f44c4d92a346cb1372f99f0d1b282211091bb.json  query-085b6d08b7cd1cb1b3d47b78c5dac604d696312582bebc22b26dffa3d9f1a130.json  query-08878fdeec397c1e1fa13c828d5036dcc9dc29074501143137bcd5ae364bdc31.json  query-0e898d8f4933e355d65fdd111b2629bab32fdcd9c05e32d57e50056dfa26c8b3.json  query-0f72631a51cfc7f0131fb6ab9b0ae9f41958d5d4f7c8177090f10866a8392249.json  query-11e6604751b5ce142df5b396c3cb1b7beb7fe3a16b9684ee8424a7eb65db744c.json  query-14a0ffda0d3c2acb4993f2c547bfa26ac099a791e58da36097b72db63f824137.json  query-15af95a26e19315746a519ef9c42f5db3c42aa946b9d35dc661732d73bf869c8.json  query-16295dc5daad4d7c2f1d027e0cb8de4df79dcf39285ec06051224b40681c7e67.json  query-18abbd5b4fe05bea751e53d64d5637e824583b56e713b6947bc92b90f061a469.json  query-1b20a78c3139790dc8e771b52e6fc7a43a535b25fd519c19549e53fab1f2b32f.json  query-1b5b15bf52c58e7fe21773ea08994ad9300cac53545da3739b8f36e1c250cf89.json  query-227d09f4375513b6cffcf6716d0964e5bad9c6b98d1c900fe5cc491eb6ba525c.json  query-22ca6194a975772a8ee5cc9a985c93df3bff462bfdea260feb3aacf918ac44f0.json  query-28c1c15ded34ea511ac4fef35e4a3c745286c3e7426715d57bd9481a2317fc29.json  query-2c60d0545b9a752d54b7d53778f86e31f73e8668d937d5b0e706d9e1184051a4.json  query-2eef0fe857b009b7573c41af2e75abb31dc3dea7940fece234038ca8ddbb7663.json  query-324a4426da05ab47e7e7e7b146f7ab3663638efcb627c22ecb73ddcf3493b8e4.json  query-32c6c09fe9eb6196ee5ca3d9e9ca7601ac44ce2e195ff5a7518eac4e6aac02ad.json  query-3417d045a3e87a2a2099055a9dd83224e14385b8691f62b7f087bbe3db35ef26.json  query-42033dada076cff7843ef5f33b5c87a3961e37671776d82d2c2f306f57c6efa1.json  query-42c72504362cb12f0d7e706395ffab7ae29b6fb07e8f39f7ed4e06228155f0d3.json  query-4f3cc91ff241c37ed5a06c18344ef4a79528ae5bd31824b750383dbd15974b92.json  query-541c29251ad06495e8faff95ea2c26aaa73379aece2804576491d1b71f7aa518.json  query-5703922d81e137ae18f060aebc15210f118dc0ab28d445b2375cf789987525ab.json  query-5e61b8f4c44974252297bcbae6b8a8c67581f5f9d3fde0511daa235ce07a034f.json  query-609948559e6f9bc6978643de3142d1feaa9a40a52a6f1d439ea746a4b50ea561.json  query-61637e433ba863041a5affbd2871ff84e00286bc3f4ad022fd003c620884c577.json  query-64cda6ba9e475add22ea5a397eb8a54f4d7e75abd5742910fabc21db93c274f4.json  query-6565cd49e32eb37101f248a6c02cb351df9a6b26d7427ff76c2580bf63f96847.json  query-67612f54e5f152c9135e5b6d3e9455638c1cf09c7c48275342e641873259e5b4.json  query-68e17e663929729d17903ebef9260949988e825f66bbcab0b31546553d8861a5.json  query-6bb9088f93403c8b75e91b2c0c99fe2aac71945db4ae4bc7ff01f96278e89a84.json  (+48 more)
src-tauri/src/: db.rs  (+12 more)
(+109 files in other folders)
