[package]
name = "subtracked"
version = "0.5.0"
description = "Lokaler Liquiditäts-Radar für wiederkehrende Zahlungen: Abos, Konten-Deckungsforecast und Erinnerungen — ohne Cloud."
authors = ["TCGTVV"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/TCGTVV/SubTracked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subtracked_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
tokio = { version = "1.52.3", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2.7.1"
ts-rs = { version = "12.0.1", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros"] }

[features]
# Nur zum Regenerieren von src/generated/*.ts: `cargo test --features ts-rs-export export`
# in src-tauri/. Nicht Default, damit normale Builds (inkl. Release) ts-rs/ts-rs-macros
# nicht mitkompilieren — die generierten Bindings werden nur zur Entwicklungszeit
# gebraucht, nie zur Laufzeit.
ts-rs-export = ["dep:ts-rs"]
